infra/k8s/blog-content/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: tomsblog
spec:
  redirectScheme:
    scheme: https
    permanent: true
