infra/k8s/blog-content/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tomsblog
  annotations:
    linkerd.io/inject: enabled
