infra/k8s/blog-content/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-content
  namespace: tomsblog
  labels:
    app: blog-content
spec:
  type: ClusterIP
  selector:
    app: blog-content
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
