infra/k8s/blog-content/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-content
  namespace: tomsblog
  labels:
    app: blog-content
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: tomsblog-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - blog.tomirgang.de
      secretName: blog-content-tls
  rules:
    - host: blog.tomirgang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-content
                port:
                  name: http
