infra/k8s/blog-content/authz-policy-probes.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-probes-to-blog-content
  namespace: tomsblog
  labels:
    app: blog-content
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: blog-content-http
  requiredAuthenticationRefs:
    - name: kubelet-probes
      kind: NetworkAuthentication
      group: policy.linkerd.io
