infra/k8s/blog-content/authz-policy-traefik.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-traefik-to-blog-content
  namespace: tomsblog
  labels:
    app: blog-content
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: blog-content-http
  requiredAuthenticationRefs:
    - name: traefik-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
